--- a/styles.css
+++ b/styles.css
@@ -595,15 +595,20 @@ footer {
     font-weight: 400;
 }
 
+.info__footer {
+    text-decoration: underline;
+    color: #000;
+    cursor: pointer; 
+}
+
 .communication img {
     margin-right: 20px;
     margin-top: 20px;
+    cursor: pointer;
 }
 
 .info {
     margin-right: 70px;
+    z-index: 100;
 }
 
-.info {
-    margin-right: 70px;
-}
