--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,47 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-    margin: 0;
+	line-height: 1;
     font-family: 'Lexend', sans-serif;
     overflow-x: hidden;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 /* Header */
@@ -15,24 +55,28 @@ body {
     padding: 2% 6%;
     position: absolute;
     margin-left: 100px;
+
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .logo {
+    margin-right: 700px;
+    
     display: flex;
     align-items: center;
+
     width: 115px;
     height: 36px;
-    margin-right: 700px;
 }
 
-.logo__p {
+.logo__title {
+    margin-left: 12px;
+
     color: #1B1C57;
     font-size: 16px;
     font-weight: 700;
-    margin-left: 12px;
 }
 
 .nav {
@@ -40,12 +84,14 @@ body {
 }
 
 .nav__button {
+    margin-right: 20px;
+
+    width: 96px;
+    height: 34px;
+
     background-color: rgba(28,28,28,0);
     border: 1px solid lightgray;
     border-radius: 100px;
-    width: 96px;
-    height: 34px;
-    margin-right: 20px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
@@ -56,29 +102,33 @@ body {
     color: white;
 }
 
-.nav__button a {
+.nav__button-link {
+    text-align: center;
+
     font-size: 14px;
     font-family: 'Lexend', sans-serif;
     font-weight: 600;
     color: #F0F3FD;
     text-decoration: none;
-    text-align: center;
 }
 
 .dop-link {
-    font-size: 14px;
-    font-weight: 600;
-    color: #F0F3FD;
-    background-color: rgba(28,28,28,0);
-    border-radius: 100px;
-    border: 1px solid lightgray;
-    text-decoration: none;
-    width: 96px;
-    height: 34px;
     padding: 0px 15px;
+
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 96px;
+    height: 34px;
+
+    font-size: 14px;
+    font-weight: 600;
+    color: #F0F3FD;
+    text-decoration: none;
+    
+    background-color: rgba(28,28,28,0);
+    border-radius: 100px;
+    border: 1px solid lightgray;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
@@ -90,25 +140,29 @@ body {
 }
 
 .dop-link__a {
+    margin-right: 5px;
+
     text-decoration: none;
     font-size: 14px;
     font-weight: 600;
     color: #F0F3FD;
-    margin-right: 5px;
 }
 
 .header__button {
-    background-color: #D1FAE5;
-    width: 117px;
-    height: 56px;
-    color: #047857;
-    font-size: 14px;
-    font-weight: 600;
-    border-radius: 100px;
-    border: none;
     padding: 0px;
     margin-left: 50px;
+
+    width: 117px;
+    height: 56px;
+
+    color: #047857;
     font-family: 'Lexend', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    
+    background-color: #D1FAE5;
+    border-radius: 100px;
+    border: none;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
@@ -128,46 +182,53 @@ body {
     margin-left: 100px;
 }
 
-.first-section h1 {
+.first-section__title {
     position: relative;
+    margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 40px;
     color: #1B1C57;
     z-index: 1;
+    line-height: 50px;
 }
 
-.first-section span {
+.first-section__frame {
     color: #fff;
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
-.first-section p {
+.first-section__label {
     font-size: 16px;
     font-weight: 400;
     color: #626687;
     line-height: 30px;
 }
 
-.first-section input {
-    width: 210px;
-}
-
 .search {
+    margin: 30px 0;
+
     display: flex;
     align-items: center;
-    border: 1px solid lightgray;
-    border-radius: 100px;
     width: 496px;
     height: 56px;
-    margin: 30px 0;
+  
+    border: 1px solid lightgray;
+    border-radius: 100px;
 }
 
 .search__p {
+    margin-left: 20px;
+    margin-right: 105px;
+
+    width: 210px;
+
     font-size: 14px;
     font-weight: 500;
     color: #888B97;
-    margin-left: 20px;
-    margin-right: 105px;
+
+    outline: none;
+    border: none;
 }
 
 .search__img {
@@ -175,25 +236,29 @@ body {
 }
 
 .search__button {
-    background-color: #10B981;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     width: 109px;
     height: 48px;
-    border-radius: 100px;
-    border: none;
+
     color: #FFFFFF;
     font-size: 14px;
     font-weight: 600;
     font-family: 'Lexend', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+    background-color: #10B981;
+    border-radius: 100px;
+    border: none;
 }
 
 .second-section {
     margin-left: 220px;
 }
 
-.logo-partnership img {
+.logo-partnership__image {
+    margin-top: 10px;
     margin-right: 30px;
 }
 
@@ -218,7 +283,7 @@ body {
 .green-container {
     width: 150px;
     position: relative;
-    bottom: 370px;
+    bottom: 365px;
     left: 240px;
 }
 
@@ -230,9 +295,9 @@ body {
 }
 
 .face {
+    margin-top: 15px;
     display: flex;
     width: 50px;
-    margin-top: 15px;
 }
 
 .blond-woman {
@@ -253,40 +318,46 @@ body {
 }
 
 .cards {
-    display: flex;
-    align-items: center;
     margin-right: 15px;
     margin-left: 0px;
-    background-color: #FFFFFF;
-    border-radius: 40px;
+
+    display: flex;
+    align-items: center;
+    
     width: 328px;
     height: 104px;
+
+    background-color: #FFFFFF;
+    border-radius: 40px;
 }
 
-.cards__p {
+.cards__title {
     color: #1B1C57;
     font-size: 16px;
     font-weight: 600;
+    line-height: 30px;
 }
 
-.cards__span {
+.cards__lable {
     color: #68799F;
     font-size: 12px;
     font-weight: 400;
+    line-height: 10px;
 }
 
 .cards-text {
+    margin-top: 10px;
     margin-left: 110px;
     margin-bottom: 30px;
     line-height: 10px;
-    margin-top: 10px;
 }
 
 .second-cards {
-    width: 201px;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    width: 201px;
 }
 
 .second-cards-text {
@@ -296,14 +367,258 @@ body {
 }
 
 .third-cards-text {
-    line-height: 10px;
     margin-bottom: 15px;
     margin-left: 105px;
+
+    line-height: 10px; 
 }
 
-.third-cards img {
+.third-cards__image {
     margin-top: 15px;
     position: absolute;
+}
+
+/* Section Slider */
+
+.slider {
+    margin-bottom: 100px;
+    margin-left: 190px;
+
+    overflow-x: scroll;
+}
+
+.slider-top {
+    margin-bottom: 40px;
+
+    display: flex;
+    align-items: center;
+
+    width: 1280px;
+}
+
+.recommendation {
+    width: 383px;
+    height: 70px;
+}
+
+.recommendation-logo {
+    display: flex;
+    align-items: center;
+}
+
+.recommendation-logo__lable {
+    margin-left: 10px;
+
+    font-size: 14px;
+    font-weight: 200;
+    color: #f59e0b;
+}
+
+.recommendation__title {
+    margin-top: 20px;
+    margin-left: 40px;
+
+    font-size: 32px;
+    font-weight: 600;
+    color: #1b1c57;
+}
+
+.nav-button {
+    margin: 0 139px;
+    display: flex;
+}
+
+.material-symbols-outlined {
+    margin-right: 10px;
+}
+
+.nav-button__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 135px;
+    height: 52px;
+
+    font-family: 'Lexend', sans-serif;
+    font-weight: 400;
+    color: #888B97;
+    font-size: 18px;
+
+    border-radius: 100px;
+    border: 1px solid lightgray;
+    background-color: #FFFFFF;
+    transition: all ease 1.5s;
+}
+
+.nav-button__button_small-size {
+    width: 119px;
+    margin: 0 32px;
+}
+
+.nav-button__button_big-size {
+    width: 175px;
+}
+
+.nav-button__button_color-green:hover {
+    color: #10B981;
+
+    background-color: #D1FAE5;
+    border: none;
+}
+
+.nav-button__button_color-red:hover {
+    color: #ef4444;
+
+    background-color: #fee2e2;
+    border: none;
+}
+
+.nav-button__button_color-blue:hover {
+    color: #1d4ed8;
+
+    background-color: #dbeafe;
+    border: none;
+}
+
+.side-button {
+    width: 150px;
+}
+
+.side-button_button {
+
+    width: 60px;
+    height: 52px;
+
+    color: #3C4563;
+    font-size: 26px;
+
+    background-color: #e0e3eb;
+    border-radius: 100px;
+    border: none;
+
+    transition: all ease 1.5s;
+}
+
+.side-button_button:hover {
+    color: #ffffff;
+    background-color: #10B981;
+}
+
+.side-button__button_retreat {
+    margin-right: 16px;
+}
+
+.hero-cards {
+    display: flex;
+    
+}
+
+.hero-card {
+    margin-left: 40px;
+
+    width: 340px;
+    height: 552px;
+}
+
+.card-image__button{
+    position: relative;
+    bottom: 52px;
+    left: 15px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 111px;
+    height: 34px;
+
+    font-family: 'Lexend', sans-serif;
+    font-size: 14px;
+
+    border-radius: 100px;
+    border: none;
+}
+
+.card-image__button_background-red-color {
+    color: #ef4444;
+    background-color: #fee2e2;
+}
+
+.card-image__button_background-red-color:hover {
+    color:  #fee2e2;
+    background-color: #ef4444;
+}
+
+.card-image__button_background-blue-color {
+    color: #1d4ed8;
+    background-color: #dbeaee;
+}
+
+.card-image__button_background-blue-color:hover {
+    color: #dbeaee;
+    background-color: #1d4ed8;
+}
+
+.card-image__button_background-green-color {
+    color: #047857;
+    background-color: #D1FAE5;
+}
+
+.card-image__button_background-green-color:hover {
+    color: #D1FAE5;
+    background-color: #047857;
+}
+
+.background-green-color {
+    color: #047857;
+    background-color: #D1FAE5;
+}
+
+.background-green-color:hover {
+    color: #D1FAE5;
+    background-color: #047857;
+}
+
+
+.card-image__button_big-size {
+    width: 135px;
+}
+
+.card-image__button_medium-size {
+    width: 130px;
+}
+
+.hero-card__category {
+    font-size: 24px;
+    color: #3C4563;
+}
+
+.hero-card__price {
+    margin: 8px 0 24px;
+
+    font-size: 20px;
+    color: #3c4563;
+}
+
+.person {
+    display: flex;
+    align-items: center;
+}
+
+.person-name {
+    margin-left: 10px;
+}
+
+.person-name__full-name {
+    font-size: 18px;
+    color: #0e1735;
+}
+
+.person-name__place {
+    margin-top: 5px;
+
+    font-size: 14px;
+    color: #888b97;
 }
 
 /* Section Find */
@@ -340,7 +655,7 @@ body {
 }
 
 .section-title__button {
-    margin-top: 10px;
+    margin-top: 20px;
     
     width: 118px;
     height: 46px;
@@ -385,7 +700,7 @@ body {
     margin-left: 20px;
 }
 
-.person {
+.card-person {
     display: flex;
     align-items: center;
     height: 32px;
@@ -413,6 +728,8 @@ body {
     color: #1B1C57;
     font-size: 18px;
     font-weight: 600;
+    line-height: 30px;
+    margin: 10px 0;
 }
 
 .card-way_size {
@@ -424,6 +741,8 @@ body {
     font-size: 14px;
     font-weight: 400;
     color: #626687;
+    line-height: 20px;
+    margin-bottom: 20px;
 }
 
 .time__date {
@@ -438,13 +757,9 @@ body {
 
 .subscribe {
     margin: 100px auto 200px;
+
     width: 1200px;
     height: 312px;
-}
-
-.subscribe input, .first-section input {
-    outline: none;
-    border: none;
 }
 
 .subscribe-title {
@@ -460,22 +775,30 @@ body {
 }
 
 .subscribe-search {
+    margin: 30px auto;
+
     display: flex;
     align-items: center;
-    border-radius: 100px;
+
     width: 496px;
     height: 54px;
-    margin: 30px auto;
+
+    border-radius: 100px;
     background-color: #FFFFFF;
 }
 
 .subscribe-search__email {
+    margin-left: 10px;
+    margin-right: 10px;
+
     width: 300px;
+
     font-size: 14px;
     font-weight: 500;
     color: #888B97;
-    margin-left: 10px;
-    margin-right: 10px;
+
+    outline: none;
+    border: none;
 }
 
 .subscribe-search__img {
@@ -555,9 +878,10 @@ body {
 
 /* Footer */
 
-footer {
+.footer {
     padding: 0 6%;
     margin-left: 100px;
+
     display: flex;
 } 
 
@@ -566,45 +890,59 @@ footer {
     margin-bottom: 20px;
 }
 
-
 .footer__img {
     position: absolute;
 }
 
 .bottom-ball {
     left: 1020px;
-    top: 2100px;
+    top: 2900px;
     z-index: 1;
 }
 
 .right-ball {
     left: 1225px;
-    top: 2035px;
+    top: 2835px;
     z-index: 0;
 }
 
-.info span {
+.info__label {
     font-size: 18px;
     font-weight: 600;
 }
 
-.footer__p {
+.footer__title {
     font-size: 14px;
     color: #888B97;
     line-height: 25px;
     font-weight: 400;
 }
 
+.info__footer {
+    margin-top: 20px;
+}
+
 .info__footer:hover {
     text-decoration: underline;
     color: #000;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
-.communication img {
-    margin-right: 20px;
-    margin-top: 20px;
+.communication {
+    display: flex;
+    align-items: center;
+}
+
+.fa-brands {
+    margin-right: 40px;
+    margin-top: 40px;
+
     cursor: pointer;
+    color: #3C4563;
+}
+
+.fa-brands:hover {
+    color: black;
 }
 
 .info {
